# defi

./: .gitignore  README.md  TODO.txt  [2103.02228] On the Just-In-Time Discovery of Profit-Generating Transactions in DeFi Protocols.txt  backtest_report_backtest_20250907_032045.json  backtesting_results.db  backtesting_system.py  comprehensive_performance_report_20250907_041113.json  data_validation_report.json  debug_tokens.py  error_handling_test_results.json  flash_loan_validation_results.json  historical_data.db  integrated_performance.db  integrated_performance_system.py  lending_swap_strategy_test_results_1757234628.json  max_revenue_verification_max_revenue_verification_20250907_034635.json  memory_leak_performance_check.py  mev_optimization_test_results.json  monitoring_system.db  optimization_test_results.json  paper_results_dashboard.py  prompt.txt  pyproject.toml  quick_performance_test.py  quick_stress_test_25_assets.db  quick_stress_test_25_assets_20250907_050758.json  redundancy_test_report.json  reply.txt  revenue_targets.db  roi_performance.db  roi_performance_report_20250907_040946.json  roi_performance_tracker.py  run_historical_backfill.py  run_validator.py  setup.py  simple_memory_check.py  stress_test_25_assets.db  system_stability_96_protocols_report.json  telegram_send.py  (+48 more)
.claude/: settings.local.json
abi/: FlashArbitrage.json  FlashArbitrageAaveV3.json  FlashArbitrageV2.json  erc20.json  uniswap_v2_factory.json  uniswap_v2_pair.json
config/: config.py  notification_config.json  paper_assets_25.json
contracts/: FlashArbitrage.sol  (+2 more)
(+102 files in other folders)
