[project]
name = "defi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kwon-YJ", email = "kyj1435@gmail.com" }
]
dependencies = [
    "web3>=7.13.0",
    "asyncio>=4.0.0",
    "aiohttp>=3.12.15",
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "redis>=6.4.0",
    "python-dotenv>=1.1.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "eth-account>=0.13.7",
    "websockets>=15.0.1",
    "requests>=2.32.5",
    "python-telegram-bot==13.4.1",
    "urllib3==1.26.18",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "scipy>=1.16.1",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "telebot>=0.0.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/defi"]
